Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-31366

Assertion `thd->start_time' failed in bool LOGGER::slow_log_print(THD*, const char*, size_t, ulonglong)

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.4(EOL), 10.5(EOL), 10.6(EOL), 10.8(EOL), 10.9(EOL), 10.10(EOL), 10.11, 11.0(EOL)
    • 10.5.28, 10.6.21, 10.11.11, 11.4.5, 11.7.2
    • OTHER
    • None

    Description

      SET GLOBAL slow_query_log=ON;
      SET local slow_query_log=ON;
      SET long_query_time=0.000001;
      SET timestamp=0.99;
      

      Leads to:

      11.0.2 368dd22a816f3b437bccd0b9ff28b9de9b1abf0a (Debug)

      mariadbd: /test/11.0_dbg/sql/log.cc:1456: bool LOGGER::slow_log_print(THD*, const char*, size_t, ulonglong): Assertion `thd->start_time' failed.
      

      11.0.2 368dd22a816f3b437bccd0b9ff28b9de9b1abf0a (Debug)

      Core was generated by `/test/MD270523-mariadb-11.0.2-linux-x86_64-dbg/bin/mariadbd --no-defaults --cor'.
      Program terminated with signal SIGABRT, Aborted.
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6)
          at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      [Current thread is 1 (Thread 0x14dbcb147700 (LWP 725423))]
      (gdb) bt
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      #1  0x000055ff0db24747 in my_write_core (sig=sig@entry=6) at /test/11.0_dbg/mysys/stacktrace.c:424
      #2  0x000055ff0d412460 in handle_fatal_signal (sig=6) at /test/11.0_dbg/sql/signal_handler.cc:360
      #3  <signal handler called>
      #4  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #5  0x000014dbfbb02859 in __GI_abort () at abort.c:79
      #6  0x000014dbfbb02729 in __assert_fail_base (fmt=0x14dbfbc98588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x55ff0de9b94f "thd->start_time", file=0x55ff0de9b89c "/test/11.0_dbg/sql/log.cc", line=1456, function=<optimized out>) at assert.c:92
      #7  0x000014dbfbb13fd6 in __GI___assert_fail (assertion=assertion@entry=0x55ff0de9b94f "thd->start_time", file=file@entry=0x55ff0de9b89c "/test/11.0_dbg/sql/log.cc", line=line@entry=1456, function=function@entry=0x55ff0de9c5b0 "bool LOGGER::slow_log_print(THD*, const char*, size_t, ulonglong)") at assert.c:101
      #8  0x000055ff0d5729f1 in LOGGER::slow_log_print (this=this@entry=0x55ff0e701e80 <logger>, thd=thd@entry=0x14db94000d48, query=0x14db94013170 "SET timestamp=0.99", query_length=18, current_utime=1609222384088) at /test/11.0_dbg/sql/log.cc:1456
      #9  0x000055ff0d57a500 in slow_log_print (thd=thd@entry=0x14db94000d48, query=<optimized out>, query_length=<optimized out>, current_utime=<optimized out>) at /test/11.0_dbg/sql/log.cc:7035
      #10 0x000055ff0d11a075 in log_slow_statement (thd=thd@entry=0x14db94000d48) at /test/11.0_dbg/sql/sql_class.h:1370
      #11 0x000055ff0d1230a2 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x14db94000d48, packet=<optimized out>, packet@entry=0x14db9400ae39 "", packet_length=packet_length@entry=18, blocking=blocking@entry=true) at /test/11.0_dbg/sql/sql_parse.cc:2426
      #12 0x000055ff0d123518 in do_command (thd=0x14db94000d48, blocking=blocking@entry=true) at /test/11.0_dbg/sql/sql_parse.cc:1407
      #13 0x000055ff0d28c29e in do_handle_one_connection (connect=<optimized out>, connect@entry=0x55ff10f00988, put_in_cache=put_in_cache@entry=true) at /test/11.0_dbg/sql/sql_connect.cc:1416
      #14 0x000055ff0d28c770 in handle_one_connection (arg=0x55ff10f00988) at /test/11.0_dbg/sql/sql_connect.cc:1318
      #15 0x000014dbfc013609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #16 0x000014dbfbbff133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Bug confirmed present in:
      MariaDB: 10.4.30 (dbg), 10.5.21 (dbg), 10.6.14 (dbg), 10.8.8 (dbg), 10.9.7 (dbg), 10.10.5 (dbg), 10.11.4 (dbg), 11.0.2 (dbg)

      Bug (or feature/syntax) confirmed not present in:
      MariaDB: 10.4.30 (opt), 10.5.21 (opt), 10.6.14 (opt), 10.8.8 (opt), 10.9.7 (opt), 10.10.5 (opt), 10.11.4 (opt), 11.0.2 (opt), 11.1.0 (dbg), 11.1.0 (opt)

      Attachments

        Activity

          People

            sanja Oleksandr Byelkin
            ramesh Ramesh Sivaraman
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 2.75h
                2.75h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.